--- a/description.html
+++ b/description.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-compatible"content="IE-edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<tittle>SREE NARAYANA GURU INSTITUTE OF ENG COLLEGE</tittle>
+<title>SNGIST</title>
 </head>
 <style>
 body{
@@ -28,9 +28,7 @@ td{
 text-align:center;
 }
 #name{
-text-align:center:right;
-}
-text -align:right;
+text-align:center;
 }
 </style>
 <body>
